Updated VersionName to 11.1

--- a/app/src/main/res/layout/activity_school_admin.xml
+++ b/app/src/main/res/layout/activity_school_admin.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/layoutbackground"
-    tools:context=".SchoolAdmin"
+    tools:context="com.ams.campusconnect.SchoolAdmin"
     android:orientation="vertical">
 
     <!--Header-->
