--- a/app/src/main/res/layout/activity_generate_dtr.xml
+++ b/app/src/main/res/layout/activity_generate_dtr.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/layoutbackground"
-    tools:context=".GenerateDTR"
+    tools:context="com.ams.campusconnect.GenerateDTR"
     android:orientation="vertical">
 
     <!--Header-->
