--- a/app/src/main/res/layout/activity_log_in_attendance.xml
+++ b/app/src/main/res/layout/activity_log_in_attendance.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/layoutbackground"
-    tools:context=".LogInAttendance"
+    tools:context="com.ams.campusconnect.LogInAttendance"
     android:orientation="vertical">
 
     <!--Header-->
