--- a/app/src/main/res/layout/activity_log_in_attendance.xml
+++ b/app/src/main/res/layout/activity_log_in_attendance.xml
@@ -32,7 +32,6 @@
     <!--Body-->
     <LinearLayout
         android:id="@+id/body_LinearLayout"
-        layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -73,6 +72,14 @@
                 android:padding="16dp"/>
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/tx_info"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text=""
+            android:layout_gravity="center"
+            />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -103,19 +110,6 @@
                 android:background="@color/zxing_transparent"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/scanfingerprintbutton" />
-
-            <ImageButton
-                android:id="@+id/scanFacial_ImageButton"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginRight="30px"
-                android:layout_marginTop="30px"
-                android:layout_marginBottom="30px"
-                android:adjustViewBounds="true"
-                android:background="@color/zxing_transparent"
-                android:scaleType="fitCenter"
-                app:srcCompat="@drawable/scanfacialbutton" />
 
         </LinearLayout>
 
