Added Month and Year spinner in the Log Book

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,6 +56,31 @@
             android:textColor="#FFF000"
             android:textSize="20sp" />
 
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#F9ED69"
+            android:layout_margin="20px">
+
+            <Spinner
+                android:id="@+id/month_Spinner"
+                android:layout_width="0dp"
+                android:layout_weight="0.5"
+                android:layout_height="30sp"/>
+
+            <View
+                android:id="@+id/divider3"
+                android:layout_width="2dp"
+                android:layout_height="match_parent"
+                android:background="?android:attr/listDivider" />
+
+            <Spinner
+                android:id="@+id/year_Spinner"
+                android:layout_width="0dp"
+                android:layout_weight="0.5"
+                android:layout_height="30sp" />
+        </TableRow>
+
         <TextView
             android:id="@+id/schoolName_TextView"
             android:layout_width="match_parent"
