--- a/app/src/main/res/layout/activity_logbook.xml
+++ b/app/src/main/res/layout/activity_logbook.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/layoutbackground"
-    tools:context="com.ams.campusconnect.MainActivity"
+    tools:context="com.ams.campusconnect.LogbookActivity"
     android:orientation="vertical">
 
     <!--Header-->
