--- a/app/src/main/res/layout/activity_school_admin.xml
+++ b/app/src/main/res/layout/activity_school_admin.xml
@@ -247,17 +247,19 @@
                             android:text="ID Number"
                             android:textSize="20sp"/>
 
-                        <Switch
+                        <androidx.appcompat.widget.SwitchCompat
                             android:id="@+id/idNumber_Switch"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.25"/>
+                            android:layout_weight="0.25"
+                            tools:ignore="UseSwitchCompatOrMaterialXml" />
 
                     </TableRow>
 
                     <TableRow
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        tools:ignore="UseSwitchCompatOrMaterialXml">
 
                         <TextView
                             android:layout_width="0dp"
@@ -266,7 +268,7 @@
                             android:text="GPS Feature"
                             android:textSize="20sp"/>
 
-                        <Switch
+                        <androidx.appcompat.widget.SwitchCompat
                             android:id="@+id/gpsFeature_Switch"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
@@ -285,7 +287,7 @@
                             android:text="Time-Based Button"
                             android:textSize="20sp"/>
 
-                        <Switch
+                        <androidx.appcompat.widget.SwitchCompat
                             android:id="@+id/timeBased_Switch"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
@@ -304,7 +306,7 @@
                             android:text="QR Scanner Feature"
                             android:textSize="20sp"/>
 
-                        <Switch
+                        <androidx.appcompat.widget.SwitchCompat
                             android:id="@+id/qrScannerFeature_Switch"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
@@ -322,7 +324,7 @@
                             android:text="Biometric Feature"
                             android:textSize="20sp"/>
 
-                        <Switch
+                        <androidx.appcompat.widget.SwitchCompat
                             android:id="@+id/biometricFeature_Switch"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
